from enum import Enum

class FlightRulesEnum(Enum):
    I = "I"
    V = "V"
    Y = "Y"
    Z = "Z"

class FlightTypeEnum(Enum):
    S = "S"
    N = "N"
    G = "G"
    M = "M"
    X = "X"